bin/testsuite/tests/compiler/src/errors/compiler4834.swg
#global testerror "Saf0022"
#global #[Swag.Safety(.All, .Overflow, true)]
var x1: u8 = cast(u8) -1.0
